# haskell-ffi

./: .gitignore  Enum1.hs  LICENSE  README.md  Regex.hsc  SimpleFFI.hs  default.nix  haskell-ffi.cabal  regex.cabal  regex.nix  shell.nix
app/: Main.hs
include/: pcre.h
src/: Regex.hsc
