cabal-version: >= 1.10
name: haskell-ffi
version: 0.0.1
license: MIT
build-type: Simple
extra-source-files: include/pcre.h

flag pkg-config
  description: Use pkg-config to check for library dependences
  default: True

executable haskell-ffi
    hs-source-dirs: app
    main-is: Main.hs
    default-language: Haskell2010
    build-depends: base >= 4.0 && < 5,
                   bytestring >= 0.10.0.0 && <= 0.12.0.0,
                   haskell-ffi

library
    hs-source-dirs: src
    exposed-modules: Regex
    default-language: Haskell2010
    build-depends: base >= 4.0 && < 5,
                   bytestring >= 0.10.0.0 && <= 0.12.0.0
    build-tool-depends: hsc2hs:hsc2hs
    ghc-options: -O2
                 -Wall -fno-warn-unused-imports

    if flag(pkg-config)
      pkgconfig-depends: libpcre
    else
      extra-libraries: pcre
