name: regex
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable regex
    build-depends: base < 5
                 , regex
    default-language: Haskell2010
    main-is: Main.hs

library
    build-depends: base                      < 5
                 , bytestring >= 0.10.0.0 && <= 0.11.0.0
    default-language: Haskell2010
    extra-libraries: pcre
    exposed-modules: Regex

